--- a/pages/project1/project1-the-design.html
+++ b/pages/project1/project1-the-design.html
@@ -8,14 +8,13 @@
     <meta name="description" content="Explore the design behind the Tech Trends Project by Genny Allison. This page highlights AI-powered layout, SEO-optimized visuals, responsive design techniques, and WCAG accessibility." />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
 
     <!-- Desktop ≥ 941px -->
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1474/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_946/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
       type="image/avif"
       media="(min-width: 941px)"
       fetchpriority="high"
@@ -25,7 +24,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_708/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_452/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
       type="image/avif"
       media="(min-width: 769px) and (max-width: 940px)"
       fetchpriority="high"
@@ -35,7 +34,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_574/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_360/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
       type="image/avif"
       media="(min-width: 481px) and (max-width: 768px)"
       fetchpriority="high"
@@ -45,7 +44,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_440/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_424,h_352/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
       type="image/avif"
       media="(max-width: 480px)"
       fetchpriority="high"
@@ -393,31 +392,31 @@
         <picture> 
           <!-- Desktop ≥ 941px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1474/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_946/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
             media="(min-width: 941px)"
             type="image/avif"
           />
 
           <!-- Tablet 769px–940px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_708/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_452/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
             media="(min-width: 769px) and (max-width: 940px)"
             type="image/avif"
           />
 
           <!-- Mobile 481px–768px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_574/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_360/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
             media="(min-width: 481px) and (max-width: 768px)"
             type="image/avif"
           />
 
           <!-- Fallback ≤480px -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_440/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_424,h_352/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
             alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
-            width="220"
-            height="184"
+            width="212"
+            height="176"
             style="object-fit: cover;"
             fetchpriority="high"
             loading="eager"
@@ -440,22 +439,22 @@
         <div class="past-meets-future fancy-border-img">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_659/v1747144506/past-meets-future_pmafy7.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1304,h_976/v1748605835/where-I-started-tech-trends_dq9svh.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_300/v1747144506/past-meets-future_pmafy7.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_882,h_548/v1748605835/where-I-started-tech-trends_dq9svh.avif"
               type="image/avif"
               media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_256/v1747144506/past-meets-future_pmafy7.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_624,h_468/v1748605835/where-I-started-tech-trends_dq9svh.avif"
               alt="Tech Trends Blog Hero Image showcasing a modern, AI-powered platform for technology insights"
-              width="256"
-              height="343"
+              width="312"
+              height="234"
               loading="auto"  
               style="object-fit: cover;"
               fetchpriority="auto"
@@ -484,22 +483,22 @@
         <div class="vision fancy-border-img">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1628/v1742918096/website-design-tech-trends_xbwosg.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1624,h_1350/v1742918096/website-design-tech-trends_xbwosg.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_882/v1742918096/website-design-tech-trends_xbwosg.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_882,h_740/v1742918096/website-design-tech-trends_xbwosg.avif"
               type="image/avif"
               media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_624/v1742918096/website-design-tech-trends_xbwosg.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_624,h_528/v1742918096/website-design-tech-trends_xbwosg.avif"
               alt="Tech Trends Blog Hero Image showcasing a modern, AI-powered platform for technology insights"
-              width="256"
-              height="343"
+              width="312"
+              height="264"
               loading="auto"  
               style="object-fit: cover;"
               fetchpriority="auto"
@@ -528,23 +527,23 @@
         <div class="wireframe-img fancy-border-img" id="tt-wireframe-img1">  
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_585,h_1985/v1742921918/homepage-wireframe-tech-trends_s2lkfs.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1318,h_4416/v1742921918/homepage-wireframe-tech-trends_s2lkfs.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_487,h_1649/v1742921918/homepage-wireframe-tech-trends_s2lkfs.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_798,h_2706/v1742921918/homepage-wireframe-tech-trends_s2lkfs.avif"
               type="image/avif"
               media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
             />
             <img 
-              src="/img/homepage-wireframe-tech-trends-mobile.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_568,h_1926/v1742921918/homepage-wireframe-tech-trends_s2lkfs.avif"
               alt="Wireframe of the homepage layout for Tech Trends Blog"
               object-fit="cover"
-              width="273"
-              height="926"
+              width="284"
+              height="963"
               loading="lazy"
               fetchpriority="low"
               style="object-fit: cover;"
@@ -555,23 +554,23 @@
         <div class="wireframe-img fancy-border-img" id="tt-wireframe-img2">  
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_585,h_1057/v1747145733/category-wireframe-tech-trends_ughnnv.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1302,h_2352/v1747145733/category-wireframe-tech-trends_ughnnv.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_487,h_876/v1747145733/category-wireframe-tech-trends_ughnnv.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_798,h_1438/v1747145733/category-wireframe-tech-trends_ughnnv.avif"
               type="image/avif"
               media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
             />
             <img 
-              src="/img/category-wireframe-tech-trends-mobile.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_568,h_1926/v1747145733/category-wireframe-tech-trends_ughnnv.avif"
               alt="Wireframe of the homepage layout for Tech Trends Blog"
               object-fit="cover"
-              width="273"
-              height="486"
+              width="284"
+              height="963"
               loading="lazy"
               fetchpriority="low"
               style="object-fit: cover;"
@@ -594,11 +593,11 @@
               sizes="100vw"
             />
             <img 
-              src="/img/article-wireframe-tech-trends-mobile.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_568,h_1926/v1742921918/article-wireframe-tech-trends_mz3vf6.avif"
               alt="Wireframe of the article page layout for Tech Trends Blog"
               object-fit="cover"
-              width="273"
-              height="926"
+              width="284"
+              height="963"
               loading="lazy"
               fetchpriority="low"
               style="object-fit: cover;"
@@ -607,31 +606,7 @@
           </picture>
         </div>
       </div>
-      <div class="author-bio-container fancy-border-img" id="author-bio">
-          <picture> 
-            <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_472,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-              type="image/avif"
-              media="(min-width: 1200px)"
-              sizes="100vw"
-            />
-            <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_427,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-              type="image/avif"
-              media="(min-width: 481px) and (max-width: 1199px)"
-              sizes="100vw"
-            />
-            <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_368,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
-              width="268" 
-              height="116" 
-              alt="Photo of Genny Allison, the web developer and AI content specialist"
-              style="object-fit: contain;"
-              loading="auto" 
-              decoding="async" 
-            />
-          </picture> 
-          <div class="author-bio-text">
+<div class="author-bio-text">
             <h3>Partner with an AI Content Specialist & Web Developer</h3>
             <p><i>Looking for someone who can combine creativity,<br> cutting-edge AI tools, and technical expertise to build<br> stunning web platforms and engaging content?<br> You've come to the right place.</i></p>
             <p>At <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and web development using tools like ChatGPT, Midjourney, Figma, and Uizard. My portfolio showcases my ability to integrate AI solutions seamlessly into modern web design, delivering high-performing, SEO-optimized websites and content tailored to today's digital demands.</p>
@@ -652,40 +627,41 @@
     <div id="side-nav" class="hidden">
       <ul>
         <li><a href="/pages/collections.html">the projects</a></li>
-        <li><a href="/pages/project2/project2-intro.html#the-menu">the "menu"</a></li>
+        <li><a href="/pages/project1/project1-intro.html#the-menu">the "menu"</a></li>
         <li><a href="https://github.com/Allison2002/tech-trends.git">the code</a></li>
-        <li><a href="/pages/project2/project2-the-grade.html">the grade</a></li>
-        <li><a href="/pages/project2/project2-the-design.html">the design</a></li>
-        <li><a href="/pages/project2/project2-the-casestudy.html">the casestudy</a></li>
+        <li><a href="/pages/project1/project1-the-grade.html">the grade</a></li>
+        <li><a href="/pages/project1/project1-the-design.html">the design</a></li>
+        <li><a href="/pages/project1/project1-the-casestudy.html">the casestudy</a></li>
         <li><a href="#author-bio">contact me</a></li>
       </ul>
     </div>
     <div>
       <button class="back-to-top" id="back-to-top" class="hidden">back to top</button>
     </div>
-    <footer id="nav">
+      <footer id="nav">
         <div class="footer-logo">
           <picture> 
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_786,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_768,h_330 ,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_768,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_752,h_328,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
               type="image/avif"
               media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
             />
             <img       
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_500,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_484,h_210,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
               alt="Photo of Genny Allison, the web developer and AI content specialist"
-              width="250"
-              height="109"
+              width="242"
+              height="105"
               loading="lazy"
               fetchpriority="low"
               decoding="async" 
+              style-"object-fit: cover;"
             />
           </picture>
         </div>
