--- a/pages/project2/project2-the-casestudy.html
+++ b/pages/project2/project2-the-casestudy.html
@@ -14,7 +14,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1474/v1748537741/sports-tube-desktop_c9qmdx.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1430,h_946/v1748537741/sports-tube-desktop_c9qmdx.avif"
       type="image/avif"
       media="(min-width: 941px)"
       fetchpriority="high"
@@ -24,7 +24,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_708/v1748537741/sports-tube-tablet_mkowrj.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_452/v1748537741/sports-tube-tablet_mkowrj.avif"
       type="image/avif"
       media="(min-width: 769px) and (max-width: 940px)"
       fetchpriority="high"
@@ -34,7 +34,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_574/v1748537741/sports-tube-tablet_mkowrj.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_360/v1748537741/sports-tube-tablet_mkowrj.avif"
       type="image/avif"
       media="(min-width: 481px) and (max-width: 768px)"
       fetchpriority="high"
@@ -44,7 +44,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_440/v1748537741/sports-tube-mobile_j2lush.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_424,h_352/v1748537741/sports-tube-mobile_j2lush.avif"
       type="image/avif"
       media="(max-width: 480px)"
       fetchpriority="high"
@@ -374,7 +374,7 @@
         <div class="nav-logo">
           <a href="/index.html">
             <img
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_160,dpr_auto,fl_lossy,fl_force_strip/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_160,h_80,dpr_auto,fl_lossy,fl_force_strip/v1746551086/allisonstock-white-nav-logo_tklcra.png"
               alt="Logo for Allison Stock Inc"
               width="160" 
               height="80"
@@ -422,21 +422,21 @@
         <picture> 
           <!-- Desktop ≥ 941px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1474/v1748537741/sports-tube-desktop_c9qmdx.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1430,h_946/v1748537741/sports-tube-desktop_c9qmdx.avif"
             media="(min-width: 941px)"
             type="image/avif"
           />
 
           <!-- Tablet 769px–940px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_708/v1748537741/sports-tube-tablet_mkowrj.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_452/v1748537741/sports-tube-tablet_mkowrj.avif"
             media="(min-width: 769px) and (max-width: 940px)"
             type="image/avif"
           />
 
           <!-- Mobile 481px–768px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_574/v1748537741/sports-tube-tablet_mkowrj.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_360/v1748537741/sports-tube-tablet_mkowrj.avif"
             media="(min-width: 481px) and (max-width: 768px)"
             type="image/avif"
           />
@@ -444,10 +444,10 @@
 
           <!-- Fallback ≤480px -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_440/v1748537741/sports-tube-mobile_j2lush.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_424,h_352/v1748537741/sports-tube-mobile_j2lush.avif"
             alt="Sports Tube project hero showcasing a fast-loading, responsive sports blog with AI-generated content"
-            width="220"
-            height="184"
+            width="212"
+            height="176"
             style="object-fit: cover;"
             fetchpriority="high"
             loading="eager"
@@ -755,45 +755,20 @@
           <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
         </div>
       </div>  
-      <div class="author-bio-container fancy-border-img" id="author-bio">
-        <picture> 
-          <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_472,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-            type="image/avif"
-            media="(min-width: 1200px)"
-            sizes="100vw"
-          />
-          <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_427,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-            type="image/avif"
-            media="(min-width: 481px) and (max-width: 1199px)"
-            sizes="100vw"
-          />
-          <img 
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_368,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
-            width="268" 
-            height="116" 
-            alt="Portrait of Genny Allison, Front-End Developer and SEO &AI Content Specialist at Allison Stock Inc."
-            style="object-fit: contain;"
-            loading="auto" 
-            decoding="async" 
-          />
-        </picture> 
-        <div class="author-bio-text">
-          <h3>Partner with an AI Content Specialist & Web Developer</h3>
-          <p><i>Looking for someone who can combine creativity,<br> cutting-edge AI tools, and technical expertise to build<br> stunning web platforms and engaging content?<br> You've come to the right place.</i></p>
-          <p>At <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and web development using tools like ChatGPT, Midjourney, Figma, and Uizard. My portfolio showcases my ability to integrate AI solutions seamlessly into modern web design, delivering high-performing, SEO-optimized websites and content tailored to today's digital demands.</p>
-          <p>Connect with me on 
-            <a href="https://www.linkedin.com/in/genny-allison/" 
-              target="_blank" 
-              rel="noopener noreferrer" 
-              aria-label="Visit Genny Allison's LinkedIn on a new tab">LinkedIn
-            </a>, explore my 
-            <a href="https://gennyallison.netlify.app"
-              target="_blank" 
-              rel="noopener noreferrer" aria-label="Visit Genny Allison's professional portfolio on a new tab"
-              >portfolio</a>, or visit my <a href="/pages/contact.html">contact page</a> to see how I can help bring your vision to life.</p>
-        </div>
+      <div class="author-bio-text">
+        <h3>Partner with an AI Content Specialist & Web Developer</h3>
+        <p><i>Looking for someone who can combine creativity,<br> cutting-edge AI tools, and technical expertise to build<br> stunning web platforms and engaging content?<br> You've come to the right place.</i></p>
+        <p>At <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and web development using tools like ChatGPT, Midjourney, Figma, and Uizard. My portfolio showcases my ability to integrate AI solutions seamlessly into modern web design, delivering high-performing, SEO-optimized websites and content tailored to today's digital demands.</p>
+        <p>Connect with me on 
+          <a href="https://www.linkedin.com/in/genny-allison/" 
+            target="_blank" 
+            rel="noopener noreferrer" 
+            aria-label="Visit Genny Allison's LinkedIn on a new tab">LinkedIn
+          </a>, explore my 
+          <a href="https://gennyallison.netlify.app"
+            target="_blank" 
+            rel="noopener noreferrer" aria-label="Visit Genny Allison's professional portfolio on a new tab"
+            >portfolio</a>, or visit my <a href="/pages/contact.html">contact page</a> to see how I can help bring your vision to life.</p>
       </div>
     </main>
     <div id="side-nav" class="hidden">
@@ -814,22 +789,22 @@
         <div class="footer-logo">
           <picture> 
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_786,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_768,h_330 ,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_768,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_752,h_328,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
               type="image/avif"
               media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
             />
             <img       
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_500,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_484,h_210,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
               alt="Photo of Genny Allison, the web developer and AI content specialist"
-              width="250"
-              height="109"
+              width="242"
+              height="105"
               loading="lazy"
               fetchpriority="low"
               decoding="async" 
